Move dtb for BBB Green Wifi to its machine conf
Signed-off-by: Caio Toledo <caioviniciusdetoledo@gmail.com>

--- a/conf/machine/beaglebone-green-wifi.conf
+++ b/conf/machine/beaglebone-green-wifi.conf
@@ -4,4 +4,6 @@
 
 MACHINEOVERRIDES = "beaglebone:${MACHINE}"
 
+KERNEL_DEVICETREE_append = " am335x-bonegreen-wireless.dtb"
+
 include conf/machine/beaglebone.conf
