Use require instead of include in machine config
Signed-off-by: Caio Toledo <caioviniciusdetoledo@gmail.com>

--- a/conf/machine/beaglebone-green-wifi.conf
+++ b/conf/machine/beaglebone-green-wifi.conf
@@ -6,4 +6,4 @@ MACHINEOVERRIDES = "beaglebone:${MACHINE}"
 
 KERNEL_DEVICETREE_append = " am335x-bonegreen-wireless.dtb"
 
-include conf/machine/beaglebone.conf
+require conf/machine/beaglebone.conf
