Improve MACHINEOVERRIDES variable definition
Signed-off-by: Caio Toledo <caioviniciusdetoledo@gmail.com>

--- a/conf/machine/beaglebone-green-wifi.conf
+++ b/conf/machine/beaglebone-green-wifi.conf
@@ -2,7 +2,7 @@
 #@NAME: BeagleBone Green Wireless
 #@DESCRIPTION: Machine configuration for the BeagleBone Green Wireless
 
-MACHINEOVERRIDES = "beaglebone:${MACHINE}"
+MACHINEOVERRIDES =. "beaglebone:"
 
 KERNEL_DEVICETREE_append = " am335x-bonegreen-wireless.dtb"
 
